--- a/zabbix_assist_groq/pyproject.toml
+++ b/zabbix_assist_groq/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "groq-teste"
+name = "zabbix_assist_groq"
 version = "0.1.0"
 description = "Add your description here"
 requires-python = ">=3.13"
